--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/4e6ce01e29.js" crossorigin="anonymous"></script>
     
-    <title>Coinstarpro Bitminers</title>
+    <title>Thebitpaynexus Dashboard</title>
+
+
+
+  <script src="//code.jivosite.com/widget/64JuILVwYi" async></script>
+
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
   </body>
 </html>
