--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
     
     <title>Thebitpaynexus Dashboard</title>
 
+<!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+  var _smartsupp = _smartsupp || {};
+  _smartsupp.key = 'fde27b0b1c31a6de2f88c638c2e4b6e06dcd158b';
+  window.smartsupp||(function(d) {
+    var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+    s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+    c.type='text/javascript';c.charset='utf-8';c.async=true;
+    c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+  })(document);
+  </script>
 
 
-  <script src="//code.jivosite.com/widget/64JuILVwYi" async></script>
+  <!-- <script src="//code.jivosite.com/widget/64JuILVwYi" async></script> -->
 
   </head>
   <body>
